--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
 </head>
 <body>
  <h1> MARCOS PROPERTIES ACROSS NYC</h1> 
-  <h2>13 properties in New York, New Jersey, and Pennsylvania currently owned by the Marcos family </h2>
+  <h2>13 PROPERTIES ACROSS NEW YORK, NEW JERSEY, AND PENNSYLVANIA OWNED BY THE MARCOS FAMILY</h2>
   <div id="map"></div>
 </body>
 <style>
@@ -31,18 +31,18 @@ integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     width: 75.7%;
     margin: 0 auto;
     z-index: 1;
-    opacity: 100%; 
+    opacity: 90%; 
     mix-blend-mode:hard-light; 
  }
 h1{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-size: 45px; color: rgb(250, 0, 0);
-  mix-blend-mode:difference; 
   text-align: center;
 }
 h2{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: white;
   z-index: 3;
   text-align: center;
+  font-size: 130%;
 }
 marquee{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 font-size: xx-large;
