--- a/index.html
+++ b/index.html
@@ -14,36 +14,48 @@ integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
   <title>Marcos Property NYC</title>
 </head>
 <body>
- <h1> MARCOS PROPERTIES ACROSS NYC</h1> 
+ <h1> $$$ MARCOS PROPERTIES ACROSS NYC $$$</h1> 
   <h2>13 PROPERTIES ACROSS NEW YORK, NEW JERSEY, AND PENNSYLVANIA OWNED BY THE MARCOS FAMILY</h2>
   <div id="map"></div>
+
 </body>
 <style>
- body {
-  background-color:rgb(253, 253, 253);
+ 
+ html{background-color: black;
+}
+
+body {
+  background-color:rgb(255, 255, 255);
   background-image: url('botika.gif');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  z-index: -3;
-  opacity: 100%;
 }
+
  #map { height: 500px; 
     width: 75.7%;
     margin: 0 auto;
-    z-index: 1;
     opacity: 100%; 
-    mix-blend-mode:hard-light; 
- }
+    mix-blend-mode:hard-light;
+}
 h1{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
- font-size: 45px; color: rgb(250, 0, 0);
-  text-align: center;
+ font-size: 70px; 
+ color: rgb(250, 0, 0);
+ text-align: center;
+  margin-bottom: 35px;
+  transform: scale(.75, 2.5);
 }
 h2{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   color: white;
-  z-index: 3;
   text-align: center;
-  font-size: 130%;
+  font-size: 140%;
+}
+h3{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  color: white;
+  text-align: center;
+  font-size: 120%;
+  margin-left: 180px;
+  margin-right: 180px;
 }
 marquee{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 font-size: xx-large;
@@ -92,10 +104,10 @@ mix-blend-mode:difference;}
     <marquee direction = "right"> 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED 34,000 TORTURED </marquee>
     <marquee direction = "left"> $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH $30 BILLION IN STOLEN WEALTH </marquee>
     <marquee direction = "right"> 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED 3,200 KILLED </marquee>
- <h2>
+ <h3>
   Ferdinand Marcos took power as President of the Philippines on December 30th, 1965 as the head of a brutal dictatorship that would last until the People Power Revolution of 1986. Throughout the Marcos regime, the Filipino people faced extreme repression at a social and economic level with nearly 7 out of 10 families below the poverty line and tens of thousands jailed, tortured, and killed without trial during the 14 year period of Martial Law established in 1972. While the Filipino masses were suffering in the cities and countryside, Marcos and his family delighted in extravagant parties, vacations, and personal construction projects, paid for by the billions plundered from public funds. At the fall of the regime in 1986, the United States rescued Marcos and his family, offering them safe passage to the US where he lived out the rest of his life without repercussion. 
   
   Alongside a vast portfolio of billions of dollars in art and commercial assets, these 13 real estate properties scattered throughout the northeast serve as a monument to the rampant embezzlement of the Marocs regime and all the lives lost in favor of profit.
-</h2>
+</h3>
   </body>
 </html>
