--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
  crossorigin=""></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Marcos Property NYC</title>
+  <title>Marcos Property USA</title>
 </head>
 <body>
  <h1> $$$ MARCOS PROPERTY USA $$$</h1> 
