--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@ body {
   background-size: cover;
 }
 
+@media screen and (max-width:480px) {
+  body {
+    background-size: cover;
+    background-attachment:fixed }
+}
+
  #map { height: 500px; 
     width: 75.7%;
     margin: 0 auto;
@@ -52,7 +58,7 @@ and (min-device-width: 240px)
 and (max-device-width: 480px)
 and (-webkit-min-device-pixel-ratio: 2) {
 h1 {
-font-size: 4em; /* a little smaller*/
+font-size: 2em; /* a little smaller*/
 }
 }
 /* Portrait */
@@ -62,7 +68,7 @@ and (max-device-width: 480px)
 and (-webkit-min-device-pixel-ratio: 2)
 and (orientation: portrait) {
 h1 {
-font-size: 3.5em; /* a little smaller*/
+font-size: 1.5em; /* a little smaller*/
 }
 }
 
@@ -73,7 +79,7 @@ and (max-device-width: 480px)
 and (-webkit-min-device-pixel-ratio: 2)
 and (orientation: landscape) {
 h1 {
-font-size: 3em; /* a little smaller*/
+font-size: 1em; /* a little smaller*/
 }
 
 } 
