--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ body {
 
 @media screen and (max-width:480px) {
   body {
+    background-position-x: center;
     background-size: cover;
     background-attachment:fixed }
 }
@@ -53,14 +54,6 @@ h1{font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   transform: scale(.75, 2.5);
 }
 
-@media only screen 
-and (min-device-width: 240px) 
-and (max-device-width: 480px)
-and (-webkit-min-device-pixel-ratio: 2) {
-h1 {
-font-size: 2em; /* a little smaller*/
-}
-}
 /* Portrait */
 @media only screen 
 and (min-device-width: 240px) 
@@ -68,7 +61,7 @@ and (max-device-width: 480px)
 and (-webkit-min-device-pixel-ratio: 2)
 and (orientation: portrait) {
 h1 {
-font-size: 1.5em; /* a little smaller*/
+font-size: 1.8em;
 }
 }
 
@@ -79,7 +72,7 @@ and (max-device-width: 480px)
 and (-webkit-min-device-pixel-ratio: 2)
 and (orientation: landscape) {
 h1 {
-font-size: 1em; /* a little smaller*/
+font-size: 1.3em;
 }
 
 } 
