--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@ and (max-device-width: 480px)
 and (-webkit-min-device-pixel-ratio: 2)
 and (orientation: portrait) {
 h1 {
-font-size: 1.8em;
+  font-size: 25px;
+    transform: scale(1, 3);
 }
 }
 
@@ -95,6 +96,29 @@ font-size: xx-large;
 color: white;
 mix-blend-mode:difference;
 }
+
+/* Portrait */
+@media only screen 
+and (min-device-width: 240px) 
+and (max-device-width: 480px)
+and (-webkit-min-device-pixel-ratio: 2)
+and (orientation: portrait) {
+marquee {
+font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+}
+
+/* Landscape */
+@media only screen 
+and (min-device-width: 320px) 
+and (max-device-width: 480px)
+and (-webkit-min-device-pixel-ratio: 2)
+and (orientation: landscape) {
+marquee {
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif
+}
+
+} 
 
 .leaflet-popup-content-wrapper{color: red;
 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
