--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ and (max-device-width: 480px)
 and (-webkit-min-device-pixel-ratio: 2)
 and (orientation: portrait) {
 h1 {
-  font-size: 25px;
+  font-size: 1.3em;
     transform: scale(1, 3);
 }
 }
