--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Marcos Property USA</title>
+  <link rel="icon" type="image/x-icon" href="mask.png">
 </head>
 <body>
  <h1> $$$ MARCOS PROPERTY USA $$$</h1> 
@@ -25,7 +26,7 @@ integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
  <h3>
   These 28 US based properties reflect only a small portion of the Marcoses’ billion dollar investment portfolio made up of real estate, commercial, and art assets scattered across the world. The Philippine Supreme Court considers these landholdings as part of the larger ill-gotten wealth of the Marcos family, based on the definitions set forth in Republic Act 1379 of 1955. Many of these properties were acquired in the tail end of the dictatorship through the use of family members, shell corporations, and other cronies, all purchased through funds embezzled from the Filipino people. Lesser-known properties include gold and diamond investments in South Africa, banks and hotels in Israel, and various landholdings in Austria, London, and Rome. It is estimated that the total amount of the ill-gotten Marcos fortune exceeds $30 billion. These sites serve as a monument to the stolen wealth of the Filipino people and the enduring bond between the Marcos regime and the United States.<br /><br /> <small>[art assets sourced via pacita abad, cesar hernando, and jose maceda]<br />[geographic data gathered from public landholding records]<small>
 </h3>
-<audio controls autoplay>
+<audio controls autoplay muted>
   <source src="onlymp3.to - Jose Maceda - Ugnayan - for 20 radio stations (1973)-uGY5wQ-WF7U-256k-1657322321067 (1).mp3" type="audio/mpeg">
 </audio>
 </body>
